src/objects/Risk_Correlation__c.object
<CustomObject>
    <description>The correlation between two risks</description>
    <fields>
        <fullName>Risk_Correlation__c</fullName>
        <label>Risk Correlation</label>
        <precision>3</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Name_1__c</fullName>
        <label>Risk Name 1</label>
        <referenceTo>Risk__c</referenceTo>
        <relationshipLabel>Risk Correlations (as Risk 1)</relationshipLabel>
        <relationshipName>Risk_Correlations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Risk_Name_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Name 2</label>
        <referenceTo>Risk__c</referenceTo>
        <relationshipLabel>Risk Correlations (as Risk 2)</relationshipLabel>
        <relationshipName>Risk_Correlation</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Risk Correlation</label>
    <nameField>
        <displayFormat>R{00000}R</displayFormat>
        <label>Correlation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Correlations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>